// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get user info when sending credentials 1`] = `
Object {
  "data": "{\\"name\\":\\"Name1\\",\\"email\\":\\"email1@example.com\\",\\"id\\":1}",
  "headers": Object {
    "content-type": "application/json;charset=UTF-8",
    "location": undefined,
  },
  "statusCode": 200,
}
`;

exports[`Login / Logout 1`] = `
Object {
  "data": "{\\"name\\":\\"Name1\\",\\"email\\":\\"email1@example.com\\",\\"id\\":1}",
  "headers": Object {
    "content-type": "application/json;charset=UTF-8",
    "location": undefined,
  },
  "statusCode": 200,
}
`;

exports[`Login / Logout 2`] = `
Object {
  "data": "",
  "headers": Object {
    "content-type": undefined,
    "location": "http://localhost:8080/login?logout",
  },
  "statusCode": 302,
}
`;

exports[`Not possible to get user info when not authenticated 1`] = `
Object {
  "data": "Oops",
  "headers": Object {
    "content-type": "text/plain;charset=UTF-8",
    "location": undefined,
  },
  "statusCode": 401,
}
`;
